backend/src/public/css/pages/_home.scss
#homepage-container {
  @extend .h-100;
  @extend .px-0;
  @extend .d-flex;
  @extend .flex-column;
  @extend .flex-md-row;

  // variables
  $img-width: 320px;

  & > div.row {
    @extend .h-100;
  }

  %aside-text {
    @extend .font-size-small;
  }

  ul {
    @extend .list-unstyled;
  }

  p {
    @extend .text-muted;
  }

  // content stylings
  section {
    @extend .row;
    @extend .col-md;
    @extend .m-0;
    @extend .p-0;
    @extend .d-flex;
    @extend .justify-content-center;
    @extend .align-items-center;
  }

  section#thumbnail-section {
    min-width: $img-width;
    min-height: 350px;
    background-image: linear-gradient(45deg,#003aff 0%,#00b9ff 100%);
    img#thumbnail-image {
      width: $img-width;
      height: auto;
      box-shadow: 0 0 0 0 rgba(0,0,0,0.3), 0 23px 38px 0 rgba(0,0,0,0.43),0 25px 65px 0 rgba(0,0,0,0.1);
    }
  }

  @include media-breakpoint-up(md) {
    section#description-section {
      overflow: auto;
    }
  }

  section#description-section {
    @extend .bg-white;
    @extend .d-block;
    @extend .d-md-flex;
    #description-wrapper {
      @extend .mh-100;
      @extend .text-center;
      @extend .text-md-left;
      @extend .mx-4;
      @extend .mx-md-5;
      @extend .px-4;
      @extend .px-md-0;
      @extend .px-lg-5;
    }
    #introduction {
      @extend .my-5;
      #project-name {
        @extend .text-primary;
        @extend .h2;
      }
      #project-short-summary {
        @extend .text-dark;
        @extend .font-weight-bolder;
      }
      #project-description {
        @extend .mt-4;
      }
    }
    .spreadsheet-related-content {
      @extend .ml-4;
      @extend %aside-text;
    }
    .publication-link + p {
      @extend %aside-text;
    }
    .footer {
      @extend %aside-text;
      @extend .mt-5;
      @extend .mb-0;
    }
  }
}

